# kweaver

./: .gitignore  ARCHITECTURE.md  ARCHITECTURE.zh.md  CHANGELOG.md  CHANGELOG.zh.md  CONTRIBUTING.md  CONTRIBUTING.zh.md  README.md  README.zh.md  install.sh
data-agent/agent-executor/: .dockerignore  .env.example  .gitignore  CITemplate.yml  Makefile  README.md  agent-executor.spec  changelog.md  coverage_ut.py  last_commit_info.txt  main.py  pyproject.toml
data-agent/agent-executor/app/boot/: boot.py  load_env.py  output_commit_info.py
data-agent/agent-executor/app/common/: config.py  prompt.py  stand_log.py  structs.py
data-agent/agent-executor/app/common/errors/: __init__.py
data-agent/agent-executor/app/common/exceptions/: dolphin_sdk_exception.py
data-agent/agent-executor/app/common/international/: __init__.py  del_all_path.py  messages.pot
data-agent/agent-executor/app/common/tool/: REFACTORING_REPORT.md  agent_tool.py  mcp_tool.py  tool.py
data-agent/agent-executor/app/common/tool_v2/: agent_tool.py  api_tool.py  common.py  mcp_tool.py
data-agent/agent-executor/app/config/: builtin_ids_class.py
data-agent/agent-executor/app/config/config_v2/: README.md  __init__.py  config_class_v2.py  config_initializer.py  config_loader.py
data-agent/agent-executor/app/domain/constant/: __init__.py  session_constants.py
data-agent/agent-executor/app/driven/ad/: model_factory_service.py
data-agent/agent-executor/app/driven/anyshare/: docset_service.py  ecoindex_service.py  oauth.py  open_doc_service.py
data-agent/agent-executor/app/driven/dip/: agent_operator_integration_service.py  dp_data_source_service.py  kn_data_query_service.py  kn_knowledge_data_service.py  model_manager_service.py
data-agent/agent-executor/app/driven/infrastructure/: nebula.py  opensearch.py
data-agent/agent-executor/app/logic/: file_service.py  function_service.py  sensitive_word_detection.py
data-agent/agent-executor/app/logic/agent_core_logic/: agent_core.py  exception.py  interrupt.py  intput.py  log.py  memory.py  output.py  prompt_builder.py
data-agent/agent-executor/app/logic/agent_core_logic_v2/: agent_core_v2.py  dialog_log.py  dialog_log_v2.py  exception.py  interrupt.py  output.py  output_variables.py  prompt_builder.py  run_dolphin.py  session_handler.py  trace.py
data-agent/agent-executor/app/logic/tool/: arxiv_search.py  baidu_search.py  calculate_expression.py  check.py  check_stock.py  doc_qa_tool.py  generate_image.py  get_date.py  graph_qa_tool.py  online_search_cite_tool.py  paper_with_code_full.py  parse_temporary_file.py  send_email.py  stock_new.py  zhipu_search_tool.py
data-agent/agent-executor/app/models/: tool_requests.py  tool_responses.py
data-agent/agent-executor/app/resources/data/: sensitive_words.txt
data-agent/agent-executor/app/router/: __init__.py  function_controller.py  startup.py  tool_controller.py
data-agent/agent-executor/app/router/agent_controller_pkg/: __init__.py  agent_controller_refactoring_report.md  common.py  conversation_session_init.py  debug.py  run_agent.py  run_agent_test_by_name.py
data-agent/agent-executor/app/router/exception_handler/: __init__.py
data-agent/agent-executor/app/router/middleware_pkg/: __init__.py  before_request.py  log_requests.py  o11y_trace.py
data-agent/agent-executor/app/utils/: common.py  decorator.py  env.py  graph_util.py  increment_json.py  json.py  pymysql_pool.py  snow_id.py  text_parser.py
data-agent/agent-executor/app/utils/dict_util/: dict_path_parser_README.md  test_dict_path_parser.py
data-agent/agent-executor/app/utils/observability/: observability.py  observability_log.py  observability_setting.py  observability_trace.py  trace_context.py  trace_wrapper.py
data-agent/agent-executor/conf/: .gitignore  agent-executor.yaml.example
data-agent/agent-executor/data_migrations/: readme.md
data-agent/agent-executor/data_migrations/init/: manage_built_in_agent_and_tool.py
data-agent/agent-executor/data_migrations/init/agents/: DocQA_Agent.py  GraphQA_Agent.py  OnlineSearch_Agent.py  Plan_Agent.py  README.md  SimpleChat_Agent.py  (+3 more)
data-agent/agent-executor/docs/: makefile
data-agent/agent-executor/docs/changelogs/: 1.2.0.md
data-agent/agent-executor/docs/configuration/: config_v2_implementation.md
data-agent/agent-executor/docs/logging/: console_logger_error_usage.md  struct_logger_usage.md
data-agent/agent-executor/docs/middleware/: starlette_cancel_scope_fix.md
data-agent/agent-executor/docs/troubleshooting/: keyboard_interrupt_issue.md
data-agent/agent-executor/examples/: struct_logger_demo.py
data-agent/agent-executor/helm/: Makefile
data-agent/agent-executor/helm/agent-executor/: Chart.yaml  _componentMeta.json  values.yaml
data-agent/agent-executor/migrations/: init.sql
data-agent/agent-executor/scripts/file-server/: Makefile  file_server.md  server.py
data-agent/agent-executor/test/: __init__.py  test_dual_logger.py  test_skill_input_vo.py
data-agent/agent-executor/test/common_test/: Makefile  README.md  test_stand_log_curl.py  test_struct_logger.py
data-agent/agent-executor/test/driven_test/: __init__.py  test_agent_factory_service.py  test_embedding_client.py  test_intentpool_service.py  test_model_factory_service.py  test_open_doc_service.py
data-agent/agent-executor/test/logic_test/: test_agent_core.py
data-agent/agent-executor/test/router_test/: test_agent_controller.py
data-agent/agent-executor/test/utils_test/: test_sserender.py
data-agent/agent-executor/test/vo_test/: test_skill_vo.py
data-agent/agent-executor/ttft_performance_test/: .dockerignore  .gitignore  MANIFEST.in  README.md  debug_json.py  debug_test.py  pyproject.toml  requirements.txt  run_test.sh  setup.cfg  setup.py  test_config.yaml
data-agent/agent-executor/ttft_performance_test/examples/: config_example.yaml  queries.json
data-agent/agent-executor/ttft_performance_test/tests/: __init__.py
data-agent/agent-executor/ttft_performance_test/ttft_tester/: __init__.py  charts.py  cli.py  config.py  core.py  errors.py  models.py  reporter.py  utils.py
(+3049 files in other folders)
