[metadata]
name = ttft-performance-test
author = Claude AI
author_email = noreply@anthropic.com
description = TTFT Performance Testing Package for Conversation APIs
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/your-repo/ttft-performance-test
project_urls =
    Bug Tracker = https://github.com/your-repo/ttft-performance-test/issues
    Documentation = https://github.com/your-repo/ttft-performance-test/docs
    Source = https://github.com/your-repo/ttft-performance-test
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Software Development :: Testing
    Topic :: System :: Benchmarking
    Topic :: Internet :: WWW/HTTP :: HTTP Servers
requires-python = >=3.10

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.10
include_package_data = True
zip_safe = False

[options.packages.find]
exclude =
    tests*

[options.extras_require]
charts = matplotlib>=3.5.0
full =
    pyyaml>=6.0
    matplotlib>=3.5.0
    pandas>=1.3.0
    aiohttp>=3.8.0
dev =
    pytest>=7.0.0
    pytest-cov>=4.0.0
    black>=22.0.0
    flake8>=5.0.0
    mypy>=0.991

[options.entry_points]
console_scripts =
    ttft-tester = ttft_tester.cli:main

[bdist_wheel]
universal = 0

[egg_info]
tag_build =
tag_date = 0